--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
   <!-- 2. Escolha do Título -->
-  <section id="tema-section">
+  <section id="theme-selector">
     <div class="container">
       <h2>Escolha o Tema</h2>
       <select id="titulo-selector"></select>
@@ -42,7 +42,7 @@
   </section>
 
   <!-- 3. Escolha do Subtema -->
-  <section id="subtema-section">
+  <section id="theme-selector">
     <div class="container">
       <h2>Escolha o Subtema</h2>
       <select id="subtema-selector"></select>
