--- a/index.html
+++ b/index.html
@@ -5,23 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SuperQuiz</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-    section {
-      display: none;
-      height: 100vh;
-      overflow-y: auto;
-    }
-    section.active {
-      display: block;
-    }
-  </style>
 </head>
 <body>
+
+  <!-- Spinner de carregamento -->
+  <div id="loading" class="hidden">Carregando...</div>
 
   <!-- 1. QR Code -->
   <section id="qr-section" class="active">
@@ -32,12 +20,12 @@
     </div>
   </section>
 
-  <!-- 2. Escolha do Título -->
+  <!-- 2. Escolha do Tema -->
   <section id="tema-section">
     <div class="container">
       <h2>Escolha o Tema</h2>
       <select id="titulo-selector"></select>
-      <button id="carregar-subtemas" style="margin-top: 10px;">Ver Subtemas</button>
+      <button id="carregar-subtemas">Ver Subtemas</button>
     </div>
   </section>
 
@@ -46,14 +34,31 @@
     <div class="container">
       <h2>Escolha o Subtema</h2>
       <select id="subtema-selector"></select>
-      <button id="start-quiz" style="margin-top: 10px;">Iniciar Quiz</button>
+      <button id="voltar-tema">← Voltar</button>
+      <button id="abrir-instrucoes">Instruções</button>
+      <button id="start-quiz">Iniciar Quiz</button>
     </div>
   </section>
+
+  <!-- Modal de instruções -->
+  <div id="instrucoes-modal" class="hidden modal-content">
+    <h2>Instruções do Quiz</h2>
+    <p>Você terá tempo limitado para responder cada pergunta.</p>
+    <p>Leia com atenção e clique na resposta desejada.</p>
+    <button id="fechar-instrucoes">Fechar</button>
+  </div>
 
   <!-- 4. Quiz -->
   <section id="quiz-section">
     <div class="container">
       <div id="quiz"></div>
+      <div id="quiz-footer">
+        <div id="progress-bar"></div>
+        <div id="time-container">
+          <span id="time-label">Tempo:</span>
+          <span id="time-counter">--</span>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -62,20 +67,13 @@
     <div class="container">
       <div id="result"></div>
       <div id="relatorio"></div>
-      <button onclick="location.reload()">Tentar novamente</button>
+      <button id="reiniciar">Reiniciar</button>
     </div>
   </section>
 
   <footer>
     <p>&copy; SuperQuiz - Todos os direitos reservados</p>
   </footer>
-
-  <script>
-    function mostrarEtapa(id) {
-      document.querySelectorAll("section").forEach(sec => sec.classList.remove("active"));
-      document.getElementById(id).classList.add("active");
-    }
-  </script>
 
   <script src="script.js"></script>
 </body>
