--- a/index.html
+++ b/index.html
@@ -11,17 +11,8 @@
   <!-- Spinner de carregamento -->
   <div id="loading" class="hidden">Carregando...</div>
 
-  <!-- 1. QR Code -->
-  <section id="qr-section" class="active">
-    <h2>Acesse via Pix</h2>
-    <div class="qr-container">
-      <p>Simulação do QR Code</p>
-      <button id="pagar-button">Já paguei</button>
-    </div>
-  </section>
-
-  <!-- 2. Escolha do Tema -->
-  <section id="tema-section">
+  <!-- 1. Escolha do Tema -->
+  <section id="tema-section" class="active">
     <div class="container">
       <h2>Escolha o Tema</h2>
       <select id="titulo-selector"></select>
@@ -29,7 +20,7 @@
     </div>
   </section>
 
-  <!-- 3. Escolha do Subtema -->
+  <!-- 2. Escolha do Subtema -->
   <section id="subtema-section">
     <div class="container">
       <h2>Escolha o Subtema</h2>
@@ -48,7 +39,7 @@
     <button id="fechar-instrucoes">Fechar</button>
   </div>
 
-  <!-- 4. Quiz -->
+  <!-- 3. Quiz -->
   <section id="quiz-section">
     <div class="container">
       <div id="quiz"></div>
@@ -62,7 +53,7 @@
     </div>
   </section>
 
-  <!-- 5. Resultado + Relatório -->
+  <!-- 4. Resultado + Relatório -->
   <section id="result-section">
     <div class="container">
       <div id="result"></div>
