--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
   <!-- Spinner de carregamento -->
   <div id="loading" class="hidden">Carregando...</div>
 
+  <!-- Tela de loading com QR Code de doação -->
+  <div id="loadingQR" class="hidden">
+    <div style="text-align: center; padding: 20px;">
+      <p>🙏 Obrigado por usar o SuperQuiz!</p>
+      <p>Se puder, apoie o projeto com uma doação via Pix:</p>
+      <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/pixQrCode.jpg" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
+      <p style="font-size: 12px; opacity: 0.8;">Seu apoio nos ajuda a continuar melhorando. 💙</p>
+      <button id="fechar-loading" style="margin-top: 10px; padding: 5px 10px;">Fechar</button>
+    </div>
+  </div>
+
+
   <!-- 1. Escolha do Tema -->
   <section id="tema-section" class="active">
     <div class="container">
