--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div id="loadingQR" class="hidden">
     <div style="text-align: center; padding: 20px;">
       <p>🙏 Obrigado por usar o SuperQuiz!</p>
-      <p>Se puder, apoie o projeto com uma doação via Pix:</p>
+      <p>Seu apoio nos ajuda a continuar melhorando. 💙</p>
       <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/pixQrCode.jpg" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
-      <p style="font-size: 12px; opacity: 0.8;">Seu apoio nos ajuda a continuar melhorando. 💙</p>
+      <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix</p>
       <button id="fechar-loading" style="margin-top: 10px; padding: 5px 10px;">Fechar</button>
     </div>
   </div>
