Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <p>🙏 Obrigado por usar o SuperQuiz!</p>
       <p>Seu apoio nos ajuda a continuar melhorando. 💙</p>
       <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/pixQrCode.jpg" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
-      <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix</p>
+      <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix:</p>
+      <p style="font-size: 12px; opacity: 0.8;">Chave Pix: 8228a0af-4b9b-4af1-9100-61434909a8eb</p>
       <button id="fechar-loading" style="margin-top: 10px; padding: 5px 10px;">Fechar</button>
     </div>
   </div>
