--- a/index.html
+++ b/index.html
@@ -12,16 +12,25 @@
   <div id="loading" class="hidden">Carregando...</div>
 
   <!-- Tela de loading com QR Code de doação -->
-  <div id="loadingQR" class="hidden">
-    <div style="text-align: center; padding: 20px;">
-      <p>🙏 Obrigado por usar o SuperQuiz!</p>
-      <p>Seu apoio nos ajuda a continuar melhorando. 💙</p>
-      <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/pixQrCode.jpg" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
-      <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix:</p>
-      <p style="font-size: 12px; opacity: 0.8;">Chave Pix: 8228a0af-4b9b-4af1-9100-61434909a8eb</p>
-      <button id="fechar-loading" style="margin-top: 10px; padding: 5px 10px;">Fechar</button>
-    </div>
+<div id="loadingQR" class="hidden">
+  <div style="text-align: center; padding: 20px;">
+    <p>🙏 Obrigado por usar o SuperQuiz!</p>
+    <p>Seu apoio nos ajuda a continuar melhorando. 💙</p>
+    <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/pixQrCode.jpg" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
+    <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix:</p>
+
+    <!-- Botão de copiar -->
+    <button onclick="copiarPix()" style="padding: 6px 12px; background-color: #4caf50; color: white; border: none; border-radius: 5px; margin-bottom: 15px;">
+      Copiar chave Pix
+    </button>
+
+    <p style="font-size: 12px; opacity: 0.8;">Muito obrigado pelo seu apoio! 🙏</p>
+    <button id="fechar-loading" style="margin-top: 10px; padding: 5px 10px;">Fechar</button>
   </div>
+
+  <!-- Campo oculto com a chave -->
+  <span id="pixKey" style="display: none;">8228a0af-4b9b-4af1-9100-61434909a8eb</span>
+</div>
 
 
   <!-- 1. Escolha do Tema -->
