Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       Copiar chave Pix
     </button>
 
+<p id="copiadoMsg" style="display:none; font-size: 12px; color: #4caf50;">Chave Pix copiada!</p>
+
     <p style="font-size: 12px; opacity: 0.8;">Muito obrigado pelo seu apoio! 🙏</p>
     <button id="fechar-loading" style="margin-top: 10px; padding: 5px 10px;">Fechar</button>
   </div>
