Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix:</p>
 
     <!-- Botão de copiar -->
-    <button onclick="copiarPix()" style="padding: 6px 12px; background-color: #4caf50; color: white; border: none; border-radius: 5px; margin-bottom: 15px;">
-      Copiar chave Pix
-    </button>
+    <button id="btnCopiarPix" onclick="copiarPix()" style="padding: 6px 12px; background-color: #4caf50; color: white; border: none; border-radius: 5px; margin-bottom: 10px;">
+  Copiar chave Pix
+</button>
 
 <p id="copiadoMsg" style="display:none; font-size: 12px; color: #4caf50;">Chave Pix copiada!</p>
 
