--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div style="text-align: center; padding: 20px;">
     <p>🙏 Obrigado por usar o SuperQuiz!</p>
     <p>Seu apoio nos ajuda a continuar melhorando. 💙</p>
-    <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/pixQrCode.jpg" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
+    <img src="https://raw.githubusercontent.com/arthurantonoff/SuperQuiz/refs/heads/main/imagem/dojo.png" alt="QR Code Pix" style="max-width: 200px; width: 100%; margin: 10px auto; display: block;" />
     <p style="font-size: 12px; opacity: 0.8;">Se puder, apoie o projeto com QUALQUER doação via Pix:</p>
 
     <!-- Botão de copiar -->
